# anitk

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  CelFolder.cpp  CelFolder.h  LICENSE  Layer.h  README.org  anitk.cpp  config.h.in  crc32.cpp  crc32.h  icon.rc  lib.cpp  lib.h
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  anitk.cpp
include/anitk/: lib.h
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  test.cpp
